test/depTest5_3.slq
// args: --run

def main(){
	n:=3;
	x:=vector(n,0:ğ”¹);
	for i in [0..n){
		x[i]:=H(x[i]);
	}
	for i in [0..n){
		(x[i],a):=(1:ğ”¹,x[i]); /// error
		__show(__query("dep",a)); // âŠ¤
	}
	print(1);
	return x coerce ğ”¹^3;
}
